--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ p {
         width: 100%;
         border-radius: 0.5em;
         font-size: 1.3em;
+        display: block;
 }
  
 @media print, screen and (max-width: 640px) {
