--- a/style.css
+++ b/style.css
@@ -50,7 +50,12 @@ p {
 .flex {
         width: 640px;
         margin: 0 auto;
-        padding: 20px;
+        padding: 0 2em;
+}
+
+#top {
+        margin: 2em 0 0 0;
+        display: flex;
 }
 
 #title {
@@ -58,7 +63,7 @@ p {
 }
 
 #menu {
-        float: right;       
+        float: right;
 }
 
 #menu a {
@@ -77,7 +82,6 @@ p {
         width: 100%;
         border-radius: 0.5em;
         font-size: 1.3em;
-        display: block;
 }
  
 @media print, screen and (max-width: 640px) {
