--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ a:hover {
         text-decoration: underline;
 }
 
-h1, h2, h3 {
+h1, h2, h3, .app > span {
         font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Arial, sans-serif;
 }
 
@@ -72,6 +72,32 @@ h3 {
         width: 100%;
         text-align: center;
         margin: 6em 0 4em 0;
+}
+
+.app {
+        width: 80%;
+        border-color: #62D9FF;
+        border-style: solid;
+        border-width: 1px;
+        border-radius: 1.3em;
+        display: flex;
+        align-items: center;
+        padding: 0.2em 0.35em;
+}
+
+.app > #app_icon {
+        margin: 0 0 2px 0;
+}
+
+.app > #app_name {
+        margin: 3px 0 0 0.5em;
+        font-weight: bold;
+}
+
+.app:hover {
+        background-color: #62D9FF;
+        text-decoration: none;
+        color: black;
 }
 
 #footer {
