--- a/style.css
+++ b/style.css
@@ -69,11 +69,11 @@ h2 {
 }
 
 h3 {
-        font-size: 1.2rem;
-        padding: 0.5em 0 0.5em 0;
-        margin-left: 15%;
+        font-size: 1rem;
+        padding: 0.35em 0 0.35em 0;
+        margin-left: 20%;
         background-color: #c2efff;
-        width: 70%;
+        width: 60%;
         text-align: center;
         display: inline-block;
         border-radius: 3em;
@@ -118,7 +118,7 @@ h3 {
         align-items: center;
         justify-content: center;
         text-align: center;
-        margin: 20px 0 20px 0;
+        margin: 20px 0 0 0;
 }
 
 .app {
